src/objects/BMCServiceDesk__StandardDescription__c.object
<CustomObject>
    <description>This object allows you to store data for standard description records.</description>
    <fields>
        <fullName>BMCServiceDesk__Description__c</fullName>
        <inlineHelpText>Use this field to enter a standard description for the selected category. This description will be added to the selected category&apos;s list of standard descriptions.</inlineHelpText>
        <label>Standard Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKCategory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>From the list of options, select the category for which you want to create a standard description.</inlineHelpText>
        <label>Category</label>
        <referenceTo>BMCServiceDesk__Category__c</referenceTo>
        <relationshipName>StandardDescriptions2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__category_Id__c</fullName>
        <formula>BMCServiceDesk__FKCategory__r.Name</formula>
        <inlineHelpText>From the list of options, select the category for which you want to create a standard description.</inlineHelpText>
        <label>Category~</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this field if the standard description record is no longer valid, but the record has to be retained for compliance with the records retention policy.</inlineHelpText>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <label>Standard Description</label>
    <listViews>
        <fullName>BMCServiceDesk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Standard Descriptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>BMCServiceDesk__Standard_Description_Category_Required</fullName>
        <active>true</active>
        <errorConditionFormula>OR( ISNULL( BMCServiceDesk__category_Id__c ) , ISBLANK( BMCServiceDesk__category_Id__c ))</errorConditionFormula>
        <errorMessage>Please enter Category.</errorMessage>
    </validationRules>
</CustomObject>